Bug 274624 - REGRESSION: Bad flashing scrolling msn.com article when search field has focus (content-visibility)
Summary: REGRESSION: Bad flashing scrolling msn.com article when search field has focu...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nikos Mouchtaris
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-05-23 15:42 PDT by Nikos Mouchtaris
Modified: 2024-05-29 11:03 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos Mouchtaris 2024-05-23 15:42:46 PDT
REGRESSION: Bad flashing scrolling msn.com article when search field has focus (content-visibility)
Comment 1 Radar WebKit Bug Importer 2024-05-23 15:45:02 PDT
<rdar://problem/128642003>
Comment 2 Nikos Mouchtaris 2024-05-23 15:54:48 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29027
Comment 3 Nikos Mouchtaris 2024-05-23 15:58:29 PDT
rdar://127743319
Comment 4 EWS 2024-05-29 11:03:15 PDT
Committed 279448@main (6027137b2de4): <https://commits.webkit.org/279448@main>

Reviewed commits have been landed. Closing PR #29027 and removing active labels.